<resources>
    <string name="app_name">wypet</string>
    <string name="title_pet">本喵</string>
    <string name="title_social">社交</string>
    <string name="title_business">商业</string>
    <string name="title_owner">主人</string>
    <string name="tab_recommended">推荐</string>
    <string name="tab_following">关注</string>
    <string name="tab_family">家族</string>
    <string name="create_new_post">发表新帖子</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="post_image">Post Image</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="scroll_to_top">回到顶部</string>
    <string name="icon_favorite">&#xe60f;</string>
    <string name="icon_customer_service">&#xe60d;</string>
    <string name="all_categories">全部分类</string>
    <string name="all">全部</string>
    <string name="for_dogs">狗狗</string>
    <string name="for_cats">猫咪</string>
    <string name="pet_supplies">宠物用品</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="subcategory_image">子类别图片</string>
        <string name="icons_604" translatable="false">&#xe604;</string>
        <string name="icons_605" translatable="false">&#xe605;</string>
        <string name="icons_606" translatable="false">&#xe606;</string>
        <string name="icons_607" translatable="false">&#xe607;</string>
        <string name="icons_608" translatable="false">&#xe608;</string>
        <string name="icons_609" translatable="false">&#xe609;</string>
        <string name="icons_60a" translatable="false">&#xe60a;</string>
        <string name="icons_60b" translatable="false">&#xe60b;</string>
        <string name="icons_60c" translatable="false">&#xe60c;</string>
        <string name="icons_60d" translatable="false">&#xe60d;</string>
        <string name="icons_60e" translatable="false">&#xe60e;</string>
        <string name="icons_60f" translatable="false">&#xe60f;</string>
        <string name="icons_610" translatable="false">&#xe610;</string>
        <string name="icons_611" translatable="false">&#xe611;</string>
        <string name="icons_612" translatable="false">&#xe612;</string>
        <string name="icons_613" translatable="false">&#xe613;</string>
        <string name="icons_614" translatable="false">&#xe614;</string>
        <string name="icons_615" translatable="false">&#xe615;</string>
        <string name="icons_616" translatable="false">&#xe616;</string>
        <string name="icons_617" translatable="false">&#xe617;</string>
        <string name="icons_618" translatable="false">&#xe618;</string>
        <string name="icons_619" translatable="false">&#xe619;</string>
        <string name="icons_61a" translatable="false">&#xe61a;</string>
        <string name="icons_61b" translatable="false">&#xe61b;</string>
        <string name="icons_61c" translatable="false">&#xe61c;</string>
        <string name="icons_61d" translatable="false">&#xe61d;</string>
        <string name="icons_61e" translatable="false">&#xe61e;</string>
        <string name="icons_61f" translatable="false">&#xe61f;</string>
        <string name="icons_620" translatable="false">&#xe620;</string>
        <string name="icons_621" translatable="false">&#xe621;</string>
        <string name="icons_622" translatable="false">&#xe622;</string>
        <string name="icons_623" translatable="false">&#xe623;</string>
        <string name="icons_624" translatable="false">&#xe624;</string>
        <string name="icons_625" translatable="false">&#xe625;</string>
        <string name="icons_626" translatable="false">&#xe626;</string>
        <string name="icons_627" translatable="false">&#xe627;</string>
        <string name="icons_628" translatable="false">&#xe628;</string>
        <string name="icons_629" translatable="false">&#xe629;</string>
        <string name="icons_62a" translatable="false">&#xe62a;</string>
        <string name="icons_62b" translatable="false">&#xe62b;</string>
        <string name="icons_62c" translatable="false">&#xe62c;</string>
        <string name="icons_62d" translatable="false">&#xe62d;</string>
        <string name="icons_62e" translatable="false">&#xe62e;</string>
        <string name="icons_62f" translatable="false">&#xe62f;</string>
        <string name="icons_630" translatable="false">&#xe630;</string>
        <string name="icons_631" translatable="false">&#xe631;</string>
        <string name="icons_632" translatable="false">&#xe632;</string>
        <string name="icons_633" translatable="false">&#xe633;</string>
        <string name="icons_634" translatable="false">&#xe634;</string>
        <string name="icons_635" translatable="false">&#xe635;</string>
        <string name="icons_636" translatable="false">&#xe636;</string>
        <string name="icons_637" translatable="false">&#xe637;</string>
        <string name="icons_638" translatable="false">&#xe638;</string>
        <string name="icons_639" translatable="false">&#xe639;</string>
        <string name="icons_63a" translatable="false">&#xe63a;</string>
        <string name="icons_63b" translatable="false">&#xe63b;</string>
        <string name="icons_63c" translatable="false">&#xe63c;</string>
        <string name="icons_63d" translatable="false">&#xe63d;</string>
        <string name="icons_63e" translatable="false">&#xe63e;</string>
        <string name="icons_63f" translatable="false">&#xe63f;</string>
        <string name="icons_640" translatable="false">&#xe640;</string>
        <string name="icons_641" translatable="false">&#xe641;</string>
        <string name="icons_642" translatable="false">&#xe642;</string>
        <string name="icons_643" translatable="false">&#xe643;</string>
        <string name="icons_644" translatable="false">&#xe644;</string>
        <string name="icons_645" translatable="false">&#xe645;</string>
        <string name="icons_646" translatable="false">&#xe646;</string>
        <string name="icons_647" translatable="false">&#xe647;</string>
        <string name="icons_648" translatable="false">&#xe648;</string>
        <string name="icons_649" translatable="false">&#xe649;</string>
        <string name="icons_64a" translatable="false">&#xe64a;</string>
        <string name="icons_64b" translatable="false">&#xe64b;</string>
        <string name="icons_64c" translatable="false">&#xe64c;</string>
        <string name="icons_64d" translatable="false">&#xe64d;</string>
        <string name="icons_64e" translatable="false">&#xe64e;</string>
        <string name="icons_64f" translatable="false">&#xe64f;</string>
        <string name="icons_650" translatable="false">&#xe650;</string>
        <string name="icons_651" translatable="false">&#xe651;</string>
        <string name="icons_652" translatable="false">&#xe652;</string>
        <string name="icons_653" translatable="false">&#xe653;</string>
        <string name="icons_654" translatable="false">&#xe654;</string>
        <string name="icons_655" translatable="false">&#xe655;</string>
        <string name="icons_656" translatable="false">&#xe656;</string>
        <string name="icons_657" translatable="false">&#xe657;</string>
        <string name="icons_658" translatable="false">&#xe658;</string>
        <string name="icons_659" translatable="false">&#xe659;</string>
        <string name="icons_65a" translatable="false">&#xe65a;</string>
        <string name="icons_65b" translatable="false">&#xe65b;</string>
        <string name="icons_65c" translatable="false">&#xe65c;</string>
        <string name="icons_65d" translatable="false">&#xe65d;</string>
        <string name="icons_65e" translatable="false">&#xe65e;</string>
        <string name="icons_65f" translatable="false">&#xe65f;</string>
        <string name="icons_660" translatable="false">&#xe660;</string>
        <string name="icons_661" translatable="false">&#xe661;</string>
        <string name="icons_662" translatable="false">&#xe662;</string>
        <string name="icons_663" translatable="false">&#xe663;</string>
        <string name="icons_664" translatable="false">&#xe664;</string>
        <string name="icons_665" translatable="false">&#xe665;</string>
        <string name="icons_666" translatable="false">&#xe666;</string>
        <string name="icons_667" translatable="false">&#xe667;</string>
        <string name="icons_668" translatable="false">&#xe668;</string>
        <string name="icons_669" translatable="false">&#xe669;</string>
        <string name="icons_66a" translatable="false">&#xe66a;</string>
        <string name="icons_66b" translatable="false">&#xe66b;</string>
        <string name="icons_66c" translatable="false">&#xe66c;</string>
        <string name="icons_66d" translatable="false">&#xe66d;</string>
        <string name="icons_66e" translatable="false">&#xe66e;</string>
        <string name="icons_66f" translatable="false">&#xe66f;</string>
        <string name="icons_670" translatable="false">&#xe670;</string>
        <string name="icons_671" translatable="false">&#xe671;</string>
        <string name="icons_672" translatable="false">&#xe672;</string>
        <string name="icons_673" translatable="false">&#xe673;</string>
        <string name="icons_674" translatable="false">&#xe674;</string>
        <string name="icons_675" translatable="false">&#xe675;</string>
        <string name="icons_676" translatable="false">&#xe676;</string>
        <string name="icons_677" translatable="false">&#xe677;</string>
        <string name="icons_678" translatable="false">&#xe678;</string>
        <string name="icons_679" translatable="false">&#xe679;</string>
        <string name="icons_67a" translatable="false">&#xe67a;</string>
        <string name="icons_67b" translatable="false">&#xe67b;</string>
        <string name="icons_67c" translatable="false">&#xe67c;</string>
        <string name="icons_67d" translatable="false">&#xe67d;</string>
        <string name="icons_67e" translatable="false">&#xe67e;</string>
        <string name="icons_67f" translatable="false">&#xe67f;</string>
        <string name="icons_680" translatable="false">&#xe680;</string>
        <string name="icons_681" translatable="false">&#xe681;</string>
        <string name="icons_682" translatable="false">&#xe682;</string>
        <string name="icons_683" translatable="false">&#xe683;</string>
        <string name="icons_684" translatable="false">&#xe684;</string>
        <string name="icons_685" translatable="false">&#xe685;</string>
        <string name="icons_686" translatable="false">&#xe686;</string>
        <string name="icons_687" translatable="false">&#xe687;</string>
        <string name="icons_688" translatable="false">&#xe688;</string>
        <string name="icons_689" translatable="false">&#xe689;</string>
        <string name="icons_68a" translatable="false">&#xe68a;</string>
        <string name="icons_68b" translatable="false">&#xe68b;</string>
        <string name="icons_68c" translatable="false">&#xe68c;</string>
        <string name="icons_68d" translatable="false">&#xe68d;</string>
        <string name="icons_68e" translatable="false">&#xe68e;</string>
        <string name="icons_68f" translatable="false">&#xe68f;</string>
        <string name="icons_690" translatable="false">&#xe690;</string>
        <string name="icons_691" translatable="false">&#xe691;</string>
        <string name="icons_692" translatable="false">&#xe692;</string>
        <string name="icons_693" translatable="false">&#xe693;</string>
        <string name="icons_694" translatable="false">&#xe694;</string>
        <string name="icons_695" translatable="false">&#xe695;</string>
        <string name="icons_696" translatable="false">&#xe696;</string>
        <string name="icons_697" translatable="false">&#xe697;</string>
        <string name="icons_698" translatable="false">&#xe698;</string>
        <string name="icons_699" translatable="false">&#xe699;</string>
</resources>